# L_lib

./: .dockerignore  .gitignore  .nvim.lua  .nvimrc  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  L_lib.sh  Makefile  README.md  add_to_path.sh  bash.sh  bash.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.gemini/skills/l-lib-unittest-writer/: SKILL.md
.gemini/skills/l-lib-unittest-writer/references/: assertions.md  patterns.sh
.github/: FUNDING.yml  bump.yml
.github/workflows/: main.yml  release.yml
bash_bugs/: index.html
builtin/: .clang-format  .clang-tidy  CMakeLists.txt  L_builtin.c  L_builtin.h  Makefile  README.md  bash.sh  lseek.c  lua.c  pipe.c  poll.c  select.c  sig.c  test.sh  test_lseek.sh  test_poll.sh  test_poll_v2.sh  test_pselect.sh  test_select.sh  test_sig.sh
builtin/src/: L_builtin.c  L_builtin.h  lseek.c  lua.c  net.c  pipe.c  poll.c  sig.c  trap.h
builtin/tests/: test_lseek.sh  test_lua.sh  test_net.sh  test_poll.sh  test_sig.sh
builtins/: CMakeLists.txt  Makefile  bash_lseek.c  bash_select.c  test_bash_lseek.sh  test_bash_select.sh
doc/: argparse.md  expansions.md
docs/: bash_bugs.md  bugs.md  expansions.md  measurements.md  redditpost.md  requirements.txt
docs/section/: L_argparse.md  L_color.md  L_has.md  L_lib.md  L_log.md  L_trap.md  L_unittest.md  all.md  ansi.md  argparse.md  args.md  array.md  asa.md  assert.md  basic.md  exit_to.md  finally.md  flow.md  foreach.md  func.md  globals.md  has.md  json.md  lib.md  lists.md  log.md  map.md  path.md  proc.md  sort.md  stdlib.md  string.md  sysexits.md  trap.md  unittest.md  utilities.md  uv.md  with.md  xargs.md
docs/sections/: uv.md
expansions/: index.html
measurements/: index.html
pr-preview/pr-47/: index.html
pr-preview/pr-47/bash_bugs/: index.html
pr-preview/pr-47/expansions/: index.html
pr-preview/pr-47/measurements/: index.html
pr-preview/pr-47/search/: search_index.json
pr-preview/pr-47/section/all/: index.html
pr-preview/pr-47/section/ansi/: index.html
pr-preview/pr-47/section/argparse/: index.html
pr-preview/pr-47/section/args/: index.html
pr-preview/pr-47/section/array/: index.html
pr-preview/pr-47/section/asa/: index.html
pr-preview/pr-47/section/assert/: index.html
pr-preview/pr-48/: 404.html  index.html  sitemap.xml
pr-preview/pr-48/assets/: _mkdocstrings.css
pr-preview/pr-48/bash_bugs/: index.html
pr-preview/pr-48/expansions/: index.html
pr-preview/pr-48/measurements/: index.html
pr-preview/pr-48/search/: search_index.json
pr-preview/pr-49/: index.html  requirements.txt  sitemap.xml
pr-preview/pr-49/bash_bugs/: index.html
pr-preview/pr-49/expansions/: index.html
pr-preview/pr-49/measurements/: index.html
pr-preview/pr-50/: 404.html  index.html
pr-preview/pr-50/bash_bugs/: index.html
pr-preview/pr-50/expansions/: index.html
pr-preview/pr-50/measurements/: index.html
pr-preview/pr-51/: 404.html  index.html  sitemap.xml
pr-preview/pr-51/bash_bugs/: index.html
pr-preview/pr-51/expansions/: index.html
pr-preview/pr-51/measurements/: index.html
pr-preview/pr-51/search/: search_index.json
pr-preview/pr-52/: index.html  sitemap.xml
pr-preview/pr-52/bash_bugs/: index.html
pr-preview/pr-52/expansions/: index.html
pr-preview/pr-52/measurements/: index.html
pr-preview/pr-53/: index.html  sitemap.xml
pr-preview/pr-53/bash_bugs/: index.html
pr-preview/pr-53/expansions/: index.html
pr-preview/pr-53/measurements/: index.html
scripts/: 1.sh  L_argparse  L_df.sh  L_flow.sh  L_foreach.sh  L_gen.sh  L_it.sh  L_uv.sh  argparse.sh  argparse_basic_usage_example.sh  argparse_detect_example.sh  argparse_func.sh  argparse_function_example.sh  argparse_git_functions.sh  argparse_git_subparser.sh  argparse_subparse.sh  argparse_subparser_example.sh  argparse_uv.sh  array_reverse_test.sh  check_all_sections_have_docs.sh  check_expansions.sh  check_xargs.sh  class_staging.sh  completeargtest.sh  completefunction.sh  completeoptions.sh  completesubparser.sh  completetest.sh  completetest2.sh  critical_section.sh  decorator.sh  dockerperfbash  env.fish  env.sh  finally.sh  finally_speed.sh  ini.sh  json.sh  json_create.sh  make_json.sh  (+17 more)
scripts/freebsd/: Vagrantfile  destroy.sh  logs.sh  restart.sh  rsync.sh  run.sh  start.sh
scripts/test/all/: test.sh
scripts/test/ansi/: test.sh
scripts/test/argparse/: debug.sh  test.sh
scripts/test/args/: test.sh
scripts/tests/log/: test_log_basic.sh  test_log_formatters.sh  test_log_levels.sh  test_log_outputs.sh
scripts/tests/string/: test_string_basic.sh  test_string_encoding.sh
search/: search_index.json
section/all/: index.html
section/ansi/: index.html
section/argparse/: index.html
section/args/: index.html
section/array/: index.html
section/asa/: index.html
section/assert/: index.html
section/colors/: index.html
section/exit_to/: index.html
section/finally/: index.html
section/foreach/: index.html
section/func/: index.html
section/globals/: index.html
section/has/: index.html
section/json/: index.html
section/lib/: index.html
section/log/: index.html
section/map/: index.html
section/path/: index.html
section/proc/: index.html
section/sort/: index.html
section/stdlib/: index.html
section/string/: index.html
section/sysexits/: index.html
section/trap/: index.html
section/unittest/: index.html
section/utilities/: index.html
section/uv/: index.html
section/with/: index.html
section/xargs/: index.html
tests/: argparse_tests.sh  argparse_tests_2.sh  argparse_tests_3.sh  argparse_tests_4.sh  argparse_uv.sh  array_index_tests.sh  check_v_comment.sh  citest.sh  foreach_tests.sh  log_1.sh  readarray_tests.sh  self_contained.sh  sort_tests.sh  source_test.sh  source_test_1.sh  source_test_2.sh  source_test_3.sh  test.sh  test_L_cache.sh  test_L_date.sh  test_L_uv.sh  test_asserts.sh  test_duration.sh  test_finally.sh  test_fuzzy.sh  test_pretty_print.sh  test_var_to_string.sh  test_xargs.sh  test_xargs_compat.sh  test_xargs_extended.sh  test_xargs_extra.sh  traceback_test.sh
(+198 files in other folders)
